shift table header if a fixed top navbar is present

--- a/_sticky-table.scss
+++ b/_sticky-table.scss
@@ -89,3 +89,8 @@
     }
   }
 }
+
+.navbar.is-fixed-top ~ .table.has-sticky-header thead th,
+.navbar.is-fixed-top ~ * .table.has-sticky-header thead th {
+  top: $navbar-height;
+}
